force-app/main/default/objects/FAFSA_Deadline__c/FAFSA_Deadline__c.object-meta.xml
<CustomObject>
    <label>FAFSA Deadline</label>
    <nameField>
        <label>FAFSA Deadline Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FAFSA Deadline</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>