force-app/main/default/objects/FAFSA_Deadline__c/fields/Calendar_URL__c.field-meta.xml
<CustomField>
    <fullName>Calendar_URL__c</fullName>
    <label>Calendar URL</label>
    <type>Url</type>
</CustomField>