force-app/main/default/objects/FAFSA_Deadline__c/fields/Deadline__c.field-meta.xml
<CustomField>
    <fullName>Deadline__c</fullName>
    <label>Deadline</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>