force-app/main/default/objects/FAFSA_Deadline__c/fields/Deadline_RT__c.field-meta.xml
<CustomField>
    <fullName>Deadline_RT__c</fullName>
    <inlineHelpText>This is the rich text format of deadline</inlineHelpText>
    <label>Deadline_RT</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>