force-app/main/default/objects/FAFSA_Deadline__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <externalId>true</externalId>
    <label>State</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>