force-app/main/default/objects/FAFSA_Deadline__c/fields/State_Abbreviated__c.field-meta.xml
<CustomField>
    <fullName>State_Abbreviated__c</fullName>
    <label>State Abbreviated</label>
    <length>100</length>
    <type>Text</type>
</CustomField>