force-app/main/default/objects/FAFSA_Deadline__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>State__c</columns>
    <columns>State_Abbreviated__c</columns>
    <columns>Deadline__c</columns>
    <columns>Deadline_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>